# dav-project

./: .gitignore  README.md  hello.py  main.ipynb  project_report.md  pyproject.toml  requirements.txt
